# ytbot

./: .gitignore  README.md  requirements.txt
ytbot/: pyproject.toml
ytbot/tests/: test_ytbot.py
ytbot/ytbot/: __init__.py  accountInfo.json  cfg.py  master.py  puppet.py  videoLinks.txt
